--- a/nw_help.html
+++ b/nw_help.html
@@ -18,15 +18,21 @@
 
 <p><p>For usual keyboard shortcuts check menus.
 
-<p><p>Image view window handles the following keys:
+<p><p>Navigation keys are as follows:
 
-<dt><b>UP/DOWN ARROWS (KEYPAD "8" and "2" )</b></dt><dd>Navigate throught current list</dd>
+<dt><b>INSERT (KEYPAD "0")</b></dt><dd>Display keypad menu. This is the MAIN MENU when using keypad-only keyboard.</dd>
+<dt><b>UP ARROW (KEYPAD "8" )</b></dt><dd>Go one item up in the list</dd>
+<dt><b>DOWN ARROWS (KEYPAD "2" )</b></dt><dd>Go one item down in the list</dd>
+<dt><b>HOME (KEYPAD "7" )</b></dt><dd>Go to the top of the list</dd>
+<dt><b>END (KEYPAD "1" )</b></dt><dd>Go to the bottom of the list</dd>
+<dt><b>PAGE_UP (KEYPAD "9" )</b></dt><dd>Go one page up in the list</dd>
+<dt><b>PAGE_DOWN (KEYPAD "3" )</b></dt><dd>Go one page down in the list</dd>
 <dt><b>LEFT ARROW (KEYPAD "4" )</b></dt><dd>Go to the parent directory</dd>
 <dt><b>RIGHT ARROW (KEYPAD "6" )</b></dt><dd>Play current movie or enter directory</dd>
 <dt><b>ENTER</b></dt><dd>Play current movie or enter directory</dd>
 <dt><b>/</b></dt><dd>Switch list sort order between NAME and MODIFY TIME</dd>
 <dt><b>*</b></dt><dd>Go to random list entry</dd>
-<dt><b>INSERT</b></dt><dd>Display keypad MENU</dd>
+<dt><b>DELETE (KEYPAD ".")</b></dt><dd>Show last play locations (directory history, also available in the keypad menu, key INSERT)</dd>
 
 <hr>
 <a name=notes>
