fixed-terminology-to-represent-correct-functionality

--- a/nw_help.html
+++ b/nw_help.html
@@ -1,5 +1,5 @@
 <a name=top>
-<h1>NightWatch Movie Navigator Help</h1>
+<h1>NightWatch Video Navigator Help</h1>
 
 
 <hr>
@@ -28,8 +28,8 @@
 <dt><b>PAGE_UP (KEYPAD "9" )</b></dt><dd>Go one page up in the list</dd>
 <dt><b>PAGE_DOWN (KEYPAD "3" )</b></dt><dd>Go one page down in the list</dd>
 <dt><b>LEFT ARROW (KEYPAD "4" )</b></dt><dd>Go to the parent directory</dd>
-<dt><b>RIGHT ARROW (KEYPAD "6" )</b></dt><dd>Play current movie or enter directory</dd>
-<dt><b>ENTER</b></dt><dd>Play current movie or enter directory</dd>
+<dt><b>RIGHT ARROW (KEYPAD "6" )</b></dt><dd>Play current video or enter directory</dd>
+<dt><b>ENTER</b></dt><dd>Play current video or enter directory</dd>
 <dt><b>/</b></dt><dd>Switch list sort order between NAME and MODIFY TIME</dd>
 <dt><b>*</b></dt><dd>Go to random list entry</dd>
 <dt><b>DELETE (KEYPAD ".")</b></dt><dd>Show last play locations (directory history, also available in the keypad menu, key INSERT)</dd>
@@ -39,12 +39,12 @@
 <a href=#top>[top]</a>
 <h2>Notes</h2>
 
-<p><p> Auto-Play function goes to the next movie and play it for 3 movies with pause of 4 seconds between.
-   Pressing any key will cancel Auto-Play. Also it will be cancelled if end-of movies list reached.
+<p><p> Auto-Play function goes to the next video and play it for 3 videos with pause of 4 seconds between.
+   Pressing any key will cancel Auto-Play. Also it will be cancelled if end-of videos list reached.
    
-<p><p> Last-Played marker (red arrow) will be shown for last movie played in a directory if more than one
-   movie found.
-   When entering new directory, the last played movie will be selected as current position in the list.
+<p><p> Last-Played marker (red arrow) will be shown for last video played in a directory if more than one
+   video found.
+   When entering new directory, the last played video will be selected as current position in the list.
    
 <p><p> When changing directory to the parent directory, the current position will be set to the name of
     the last directory.
@@ -58,15 +58,28 @@
 <h2>Credits</h2>
 
 <p>
-NightWatch Movie Navigator 2020 (c) Vladi Belperchinov Shabanski mailto:cade@bis.bg
+NightWatch Video Navigator<br>
+(c) Vladi Belperchinov-Shabanski &lt;cade@bis.bg&gt; &lt;shabanski@gmail.com&gt;<br>
+Github repo/site for Nightwatch: https://github.com/cade-vs/nightwatch<br>
 
 <p>
-...
-(used with permission)<br>
+"Journey" artwork<br>
+(c) Martina Stipan &lt;martina.stipan@gmail.com&gt; <br>
+https://www.deviantart.com/t1na<br>
 
 <p>
-Icons by Tango Project<br>
-http://tango.freedesktop.org<br>
+Coolvetica Font <br>
+(c) Typodermic Fonts <br>
+https://typodermicfonts.com/coolvetica/<br>
+
+<p>
+Tango Icons <br>
+(c) Tango Project <br>
+http://tango-project.org/<br>
+
+<p>
+NightWatch created with Qt Toolkit (c) The Qt Company <br>
+https://qt.io/<br>
 
 
 <p>
